all: Add option to parse huge SVG XML files

For security reasons, newer libxml versions applies limits that huge
SVG files exceed and thus fail parsing. Add an RSVG_HANDLE_FLAG_UNLIMITED
flag that uses XML_PARSE_HUGE to allow parsing these files again.

Note: for security reasons, this flag should ONLY be used on trusted input!

https://bugzilla.gnome.org/show_bug.cgi?id=710310